--- a/gradle.properties
+++ b/gradle.properties
@@ -4,10 +4,10 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Base info
-mc_version=1.16.5
-forge_version=36.2.23
-mcp_channel=official
-mcp_mappings=1.16.5
+mc_version=1.12.2
+forge_version=14.23.5.2860
+mcp_channel=stable
+mcp_mappings=39-1.12
 
 # Version
 version=1.2.0
