--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,11 @@ forge_version=40.1.86
 mcp_channel=official
 mcp_mappings=1.18.2
 
+#Publishing
+mod_name=Camo Creepers
+curseforge_id=525333
+modrinth_id=5wySvh3t
+
 # Version
 version=1.2.0
 
