--- a/build.gradle
+++ b/build.gradle
@@ -77,14 +77,16 @@ minecraft {
 sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 repositories {
-    maven {
-        url = "https://dvs1.progwml6.com/files/maven"
-    }
+//    maven {
+//        url = "https://dvs1.progwml6.com/files/maven"
+//    }
+//    maven {
+//        url = "https://maven.blamejared.com"
+//    }
 }
 
 dependencies {
     minecraft "net.minecraftforge:forge:${mc_version}-${forge_version}"
-
 
 //    compileOnly fg.deobf("mezz.jei:jei-${mc_version}-common-api:${jei_version}")
 //    compileOnly fg.deobf("mezz.jei:jei-${mc_version}-forge-api:${jei_version}")
