--- a/gradle.properties
+++ b/gradle.properties
@@ -4,10 +4,12 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Base info
-mc_version=1.19.4
-forge_version=45.1.0
-mcp_channel=official
-mcp_mappings=1.19.4
+mc_version=1.20.1
+forge_version=47.0.15
+mapping_channel=official
+mapping_version=1.20.1
+mod_group=com.mrbysco.camocreepers
+mod_id=camocreepers
 
 #Publishing
 mod_name=Camo Creepers
@@ -15,7 +17,7 @@ curseforge_id=525333
 modrinth_id=5wySvh3t
 
 # Version
-version=1.4.1
+version=2.0.0
 
 # Dependencies
-jei_version=13.1.0.11
+jei_version=15.1.0.19
