Port to 1.20.2 [build] [publish]

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,12 +4,13 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Base info
-mc_version=1.20.1
-forge_version=47.1.3
+mc_version=1.20.2
+neo_version=20.2.62-beta
 mapping_channel=official
-mapping_version=1.20.1
+mapping_version=1.20.2
 mod_group=com.mrbysco.camocreepers
 mod_id=camocreepers
+mod_archive_name=CamoCreepers
 
 #Publishing
 mod_name=Camo Creepers
@@ -17,7 +18,7 @@ curseforge_id=525333
 modrinth_id=5wySvh3t
 
 # Version
-version=2.0.0
+version=3.0.0
 
 # Dependencies
 jei_version=15.2.0.23
