--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,5 +1,5 @@
 modLoader="javafml"
-loaderVersion="[46,)"
+loaderVersion="[1,)"
 issueTrackerURL="https://github.com/Mrbysco/CamoCreepers/issues"
 license="MIT"
 
@@ -15,6 +15,12 @@ Creepers that blend in more with the environment
 [[dependencies.camocreepers]]
 modId="minecraft"
 mandatory=true
-versionRange="[1.20,1.21)"
+versionRange="[1.20.2,1.21)"
+ordering="NONE"
+side="BOTH"
+[[dependencies.camocreepers]]
+modId="neoforge"
+mandatory=true
+versionRange="[20.2.59-beta,)"
 ordering="NONE"
 side="BOTH"
