--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,5 +1,5 @@
 modLoader="javafml"
-loaderVersion="[1,)"
+loaderVersion="[2,)"
 issueTrackerURL="https://github.com/Mrbysco/CamoCreepers/issues"
 license="MIT"
 
@@ -14,13 +14,13 @@ Creepers that blend in more with the environment
 '''
 [[dependencies.camocreepers]]
 modId="minecraft"
-mandatory=true
-versionRange="[1.20.2,1.21)"
+type="REQUIRED"
+versionRange="[1.20.4,1.21)"
 ordering="NONE"
 side="BOTH"
 [[dependencies.camocreepers]]
 modId="neoforge"
-mandatory=true
-versionRange="[20.2.59-beta,)"
+type="REQUIRED"
+versionRange="[20.4.60-beta,)"
 ordering="NONE"
 side="BOTH"
